tests/fixtures/invalid/pow_dict_bool_none.py
# Cannot call pow() with Dict[str, int], Bool, None
x = pow({"a": 1}, True, None)
